force-app/main/default/objects/inspire1__Release__c/fields/inspire1__Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Description__c</fullName>
    <description>Description of Release.</description>
    <label>Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>