force-app/main/default/objects/inspire1__Release__c/fields/inspire1__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Release_Date__c</fullName>
    <description>Defines when the release will be delivered.</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>