force-app/main/default/objects/inspire1__Release__c/fields/inspire1__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Date__c</fullName>
    <description>Defines the date when the release work started.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>