force-app/main/default/objects/inspire1__Release__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Description__c</columns>
    <columns>inspire1__Status__c</columns>
    <columns>inspire1__Start_Date__c</columns>
    <columns>inspire1__Release_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>